fix(shrinking-header-web): elements not clickable underneath wrapping div

--- a/packages/pluggableWidgets/shrinking-header-web/src/ui/ShrinkingHeader.scss
+++ b/packages/pluggableWidgets/shrinking-header-web/src/ui/ShrinkingHeader.scss
@@ -11,6 +11,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    pointer-events: none;
 
     & > header {
         width: 100%;
